fixed skills row gap; added lc logo to favicon

--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -20,15 +20,19 @@
 .xpContent {
     margin-top: 37px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: row;
+    gap: 5%;
 }
 
 .skillsContent {
-    width: 45%;
+    width: 50%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
+    height: fit-content;
+    align-items: flex-start;
     gap: 11px;
 }
 
@@ -60,7 +64,7 @@
 
 .experiencesContent {
     display: flex;
-    width: 45%;
+    width: fit-content;
     list-style: none;
     flex-direction: column;
     gap: 40px;
@@ -78,6 +82,7 @@
     /* transition: 0.4s; */
     border-radius: 10px;
     padding: 24px;
+    padding-right: 0;
 }
 
 /* .experience:hover {
